--- a/index.html
+++ b/index.html
@@ -11,21 +11,18 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1>TRAIN</h1>
-                <time>00:00</time>
-            </div>
-            <div class="col">
-                <h1>REST</h1>
-                <time>00:00</time>
+                <h1>TEXT</h1>
+                <time id="countdown">00:00</time>
             </div>
         </div>
         <div class="icons row">
-            <button id="play"><i class="far fa-play-circle fa-7x"></i></button>
-            <button id="pause"><i class="far fa-pause-circle fa-7x"></i></button>
-            <button id="stop"><i class="far fa-stop-circle fa-7x"></i></button>
+            <button id="play"><i class="far fa-play-circle"></i></button>
+            <button id="pause"><i class="far fa-pause-circle"></i></button>
+            <button id="stop"><i class="far fa-stop-circle"></i></button>
         </div>
     </div>
 
     <script src="https://kit.fontawesome.com/8349e99f8d.js" crossorigin="anonymous"></script>
+    <script src="main.js"></script>
 </body>
 </html>
