--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css">
     
 </head>
-<body>
+<body class="body-bg-rest">
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1>TEXT</h1>
+                <h1 id="title">START</h1>
                 <time id="countdown">00:00</time>
             </div>
         </div>
