Added activity colors

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1 id="title">START</h1>
-                <time id="countdown">00:00</time>
+                <h1 id="title" class="title-bg-rest">START</h1>
+                <time id="countdown" class="countdown-bg-rest">00:00</time>
             </div>
         </div>
-        <div class="icons row">
+        <div id="icons" class="row icons-color-rest">
             <button id="play"><i class="far fa-play-circle"></i></button>
             <button id="pause"><i class="far fa-pause-circle"></i></button>
             <button id="stop"><i class="far fa-stop-circle"></i></button>
