--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         </div>
     </div>
 
+    <audio id="beep" src="beep.wav"></audio>
+    <audio id="voice-one" src="one.wav"></audio>
+    <audio id="voice-two" src="two.wav"></audio>
+    <audio id="voice-three" src="three.wav"></audio>
+
     <script src="https://kit.fontawesome.com/8349e99f8d.js" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </body>
