--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HIIT - Timer</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="favicon.png">
     
 </head>
 <body class="body-bg-rest">
@@ -22,10 +23,10 @@
         </div>
     </div>
 
-    <audio id="beep" src="beep.wav"></audio>
-    <audio id="voice-one" src="one.wav"></audio>
-    <audio id="voice-two" src="two.wav"></audio>
-    <audio id="voice-three" src="three.wav"></audio>
+    <audio id="beep" crossOrigin="anonymous"><source src="beep.wav" type="audio/wav"></audio>
+    <audio id="voice-one" crossOrigin="anonymous"><source src="one.wav" type="audio/wav"></audio>
+    <audio id="voice-two" crossOrigin="anonymous"><source src="two.wav" type="audio/wav"></audio>
+    <audio id="voice-three" crossOrigin="anonymous"><source src="three.wav" type="audio/wav"></audio>
 
     <script src="https://kit.fontawesome.com/8349e99f8d.js" crossorigin="anonymous"></script>
     <script src="main.js"></script>
