Finished settings input

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                         <div class="col">
                             <h2 class="settings-title">TRAIN</h2>
                             <div class="row inputs-container">
-                                <input type="text" id="train-input-min" value="01" maxlength="2"><span>:</span><input type="text" id="train-input-sec" value="30" maxlength="2">
+                                <input type="text" id="train-input-min" value="01" maxlength="2" min="0"><span class="semicolon">:</span><input type="text" id="train-input-sec" value="30" maxlength="2" min="0">
                             </div>                   
                         </div>
                         <div class="col">
                             <h2 class="settings-title">REST</h2>
                             <div class="row inputs-container">
-                                <input type="text" id="rest-input-min" value="00" maxlength="2"><span>:</span><input type="text" id="rest-input-sec" value="30" maxlength="2">
+                                <input type="text" id="rest-input-min" value="00" maxlength="2"><span class="semicolon">:</span><input type="text" id="rest-input-sec" value="30" maxlength="2" min="0">
                             </div>
                         </div>
                     </div>
